--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
       working-directory: codebase/rdicidr-0.1.0/
       
     steps:
+      - name: Install dependencies for the agent
+        run: npm install -g npm@7
+        
       - name: Checkout code
         uses: actions/checkout@v2
 
