--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,11 @@ jobs:
     # Version Spec of the version to use in SemVer notation.
     # It also emits such aliases as lts, latest, nightly and canary builds
     # Examples: 12.x, 10.15.1, >=10.15.0, lts/Hydrogen, 16-nightly, latest, node
-          node-version: 'latest'
+          node-version: '15.0.0'
+      
+      - name: Install dependencies for the agent
+        run: |
+          npm install -g npm@7
           
       - name: Checkout code
         uses: actions/checkout@v2
