--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,8 @@ jobs:
       - name: Build
         run: npm run build
         working-directory: ${{ env.working-directory }}
+        
+      - uses: actions/upload-artifact@v3
+        with:
+          name: node-app
+          path: .
