--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,10 +51,13 @@ jobs:
         run: npm run build
         working-directory: ${{ env.working-directory }}
         
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+        
       - uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: codebase/rdicidr-0.1.0/
+          path: release.zip
           
   deploy:
     runs-on: ubuntu-latest
@@ -63,11 +66,14 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-    steps:
+    steps:   
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
           name: node-app
+          
+      - name: unzip artifact for deployment
+        run: unzip release.zip
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
