--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
       - '*'
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
     env:
       working-directory: codebase/rdicidr-0.1.0/
@@ -47,36 +47,20 @@ jobs:
         run: npm run test --if-present -- --ci
         working-directory: ${{ env.working-directory }}
 
-      - name: Build
-        run: npm run build
-        working-directory: ${{ env.working-directory }}
-        
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-        
-      - uses: actions/upload-artifact@v3
-        with:
-          name: node-app
-          path: release.zip
-          
-  deploy:
+  build-docker-image:
     runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:   
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          name: node-app
-          
-      - name: unzip artifact for deployment
-        run: unzip release.zip
-
-      - name: 'Run Azure webapp deploy action using publish profile credentials'
-        uses: azure/webapps-deploy@v2
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  
+      - name: Build and push
+        uses: docker/build-push-action@v4
         with:
-          app-name: ccseyhantest
-          publish-profile: ${{ secrets.azureWebAppPublishProfile }}
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/rdicidr:0.1.0
+          context: codebase/rdicidr-0.1.0/
+        
+  
