--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
 
   build-docker-image:
     runs-on: ubuntu-latest
+    needs: tests
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
