--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: tests
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
